# synth

./: Cargo.toml  README.md  synth.toml
src/: main.rs
